# serializers/ticket_serializers.go
@@ -5,7 +5,7 @@ import "kanban-board/models"
 type TicketBody struct {
 	Title       string `json:"title" binding:"required" validate:"required"`
 	Description string `json:"description"`
-	KanbanID    uint   `json:"kanban_id" binding:"required" validate:"required"`
+	BoardID     uint   `json:"board_id" binding:"required" validate:"required"`
 	DropzoneID  uint   `json:"dropzone_id" binding:"required" validate:"required"`
 }
 
@@ -13,7 +13,7 @@ func (t *TicketBody) ToModel() models.Ticket {
 	return models.Ticket{
 		Title:       t.Title,
 		Description: t.Description,
-		KanbanID:    t.KanbanID,
+		BoardID:     t.BoardID,
 		DropzoneID:  t.DropzoneID,
 	}
 }
